k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dcwf-service
spec:
  selector:
    app: dcwf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
